# ndbk-bmd

./: README.md  demo.py  main.py  presentation.html  presentation.md  pyproject.toml  tune.py
.github/workflows/: ci.yml
k8s/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
notebooks/: analysis.ipynb
scripts/: deploy.sh  preprocess-data.sh  setup-cluster.sh
src/: models.py
src/service/: schemas.py  utils.py
src/training/: __init__.py  dataset.py  tuner.py  utils.py
