[project]
name = "ndbk-bmd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "hyperopt>=0.2.7",
    "imblearn>=0.0",
    "mlflow>=3.10.1",
    "scikit-learn>=1.8.0",
    "skops>=0.13.0",
    "uvicorn[standard]>=0.34.0",
    "setuptools<82.0.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = ["ipykernel>=7.2.0", "ruff>=0.9.0"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
